# birobotarm

./: .gitignore  CMakeLists.txt  README.md  config_mujoco3.sh  launch.md
install/: local_setup.sh  setup.sh
log/: latest_build
models/feixi/: feixi_model.xml
models/feixi/visual/: link3.mtl
ros2/feixi_ros2_control/: CMakeLists.txt  package.xml
ros2/feixi_ros2_control/launch/: feixi_mock_ros2_control.launch.py  feixi_mujoco_ros2_control.launch.py
ros2/feixi_ros2_control/scripts/: send_feixi_reference_trajectory.py  stream_feixi_joint_commands.py
ros2/feixi_ros2_control/src/: feixi_mujoco_hardware.cpp  feixi_pinocchio_dynamics.cpp  mj_view.cpp
ros2/feixi_ros2_control/urdf/: feixi.urdf.xacro  feixi_mock.urdf.xacro  feixi_pinocchio_model.urdf
ros2_build_ws/install/: local_setup.sh  setup.sh
ros2_build_ws/install/feixi_ros2_control/include/feixi_ros2_control/: feixi_mujoco_hardware.hpp  feixi_pinocchio_dynamics.hpp
ros2_build_ws/install/feixi_ros2_control/lib/feixi_ros2_control/: send_feixi_reference_trajectory
ros2_build_ws/install/feixi_ros2_control/share/ament_index/resource_index/package_run_dependencies/: feixi_ros2_control
ros2_build_ws/install/feixi_ros2_control/share/ament_index/resource_index/parent_prefix_path/: feixi_ros2_control
ros2_build_ws/install/feixi_ros2_control/share/feixi_ros2_control/: feixi_mujoco_hardware.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_build_ws/install/feixi_ros2_control/share/feixi_ros2_control/cmake/: ament_cmake_export_dependencies-extras.cmake  feixi_ros2_controlConfig.cmake
ros2_build_ws/install/feixi_ros2_control/share/feixi_ros2_control/config/: feixi_joint_trajectory_controller.yaml  feixi_joint_trajectory_pinocchio.yaml  ros2_controllers.yaml
ros2_build_ws/install/feixi_ros2_control/share/feixi_ros2_control/scenes/models/feixi/: feixi_model.xml  feixi_with_gripper.xml
ros2_build_ws/install/feixi_ros2_control/share/feixi_ros2_control/scenes/models/feixi/visual/: link7.mtl
ros2_build_ws/install/feixi_ros2_control/share/feixi_ros2_control/urdf/: feixi.urdf.xacro
ros2_build_ws/log/: latest_build
ros2_build_ws/src/: feixi_ros2_control
ros2_launch_log/: latest
scenes/: arm_only.xml  arm_with_gripper.xml
scenes/models/feixi/: compute_arm_inertia_from_collision.py  feixi_model.xml
scenes/models/feixi/visual/: link4.mtl  link6.mtl
src/: main1.cpp  mj_view.cpp  mj_view.hpp
src/feixi_mujoco_control/: CMakeLists.txt  feixi_mujoco_hardware.xml  package.xml
src/feixi_mujoco_control/config/: feixi_forward_position_controller.yaml  feixi_joint_trajectory_arm7_mock.yaml  feixi_joint_trajectory_effort.yaml  feixi_joint_trajectory_velocity.yaml
src/feixi_mujoco_control/include/feixi_mujoco_control/: feixi_mujoco_hardware.hpp  feixi_pinocchio_dynamics.hpp  mj_view.hpp
src/feixi_mujoco_control/launch/: feixi_mock_ros2_control.launch.py  feixi_mujoco_ros2_control.launch.py
src/feixi_mujoco_control/src/: feixi_mujoco_hardware.cpp  feixi_pinocchio_dynamics.cpp  mj_view.cpp
src/feixi_mujoco_control/urdf/: feixi.urdf.xacro
src/feixi_trajectory/: package.xml  setup.cfg  setup.py
src/feixi_trajectory/feixi_trajectory/: send_feixi_demo_trajectory.py  send_feixi_reference_trajectory.py  stream_feixi_joint_commands.py
test/: CMakeLists.txt  main.cpp
